conditions.Conditions.scala.error
Compilation error:
Conditions:3: error: value elese is not a member of Unit
possible cause: maybe a semicolon is missing before `value elese'?
} elese {
  ^Conditions:4: error: not found: value avence
  avence();
  ^